trunk/Andromeda/test/test-src/com/sc2mod/andromeda/test/junit/unittests/types/uncheckedCast2.a
extension X extends int{

}


static{
	X x = (!! X) 5; // works
	X y = (X) 3; 	//error
}
